--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enhanced Profile Card</title>
+    <title>Profile Card | by SW</title>
+    <link rel="shortcut icon" href="/img/swlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +13,7 @@
             <div class="card-inner">
                 <div class="card-front">
                     <div class="profile-picture-container">
-                        <img src="/Profile.jpg" alt="Profile Picture" class="profile-picture">
+                        <img src="/img/Profile.jpg" alt="Profile Picture" class="profile-picture">
                     </div>
                     <h2 class="name">Shreyas Wagire</h2>
                     <p class="title">Programmer</p>
