--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Card | by SW</title>
-    <link rel="shortcut icon" href="/img/swlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/new-v1.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
