add new github link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="links">
                         <a href="https://shreyasport.vercel.app/" class="link" data-icon="🌐">Portfolio</a>
                         <a href="https://www.linkedin.com/in/shreyas-wagire/" class="link" data-icon="💼">LinkedIn</a>
-                        <a href="https://github.com/ShreyasCyber" class="link" data-icon="🐙">GitHub</a>
+                        <a href="https://github.com/Shreyas-Wagire" class="link" data-icon="🐙">GitHub</a>
                         <a href="https://leetcode.com/u/Shreyas_Wagire/" class="link" data-icon="👨🏻‍💻">Leetcode</a>
                         <a href="mailto:shreyaswagire07sw@gmail.com" class="link" data-icon="📧">Email</a>
                         <a href="https://www.hackerrank.com/profile/shreyaswagire071" class="link" data-icon="📝">HackerRank</a>
